@@ -1,4 +1,4 @@
-diagram-fonts: [ISDiagram, GC]
+diagram-fonts: [ISDiagram, GC, merida, alpha, leipzig]
 inline-fonts: [default, Ches]
 defaults:
   diagram: ISDiagram
@@ -19,6 +19,30 @@ config:
     edges: {W: 73, NW: 77, N: 75, NE: 78, E: 74, SE: 79, S: 76, SW: 80}
     aux-postfix: !!python/unicode ''
     glyphs-tab: resources/fonts/xfen-isdiagram.txt
+    size: 8
+  merida:
+    display-name: Merida (orthodox)
+    prefix: Chess Merida
+    empty-squares: {light: 42, dark: 43}
+    edges: {W: 36, NW: 33, N: 34, NE: 35, E: 37, SE: 41, S: 40, SW: 47}
+    aux-postfix: !!python/unicode ''
+    glyphs-tab: resources/fonts/xfen-common.txt
+    size: 8
+  alpha:
+    display-name: Alpha (orthodox)
+    prefix: Chess Alpha
+    empty-squares: {light: 42, dark: 43}
+    edges: {W: 52, NW: 49, N: 50, NE: 51, E: 53, SE: 56, S: 55, SW: 54}
+    aux-postfix: !!python/unicode ''
+    glyphs-tab: resources/fonts/xfen-alpha.txt
+    size: 8
+  leipzig:
+    display-name: Leipzig (orthodox)
+    prefix: Chess Leipzig
+    empty-squares: {light: 42, dark: 43}
+    edges: {W: 36, NW: 33, N: 34, NE: 35, E: 37, SE: 41, S: 40, SW: 47}
+    aux-postfix: !!python/unicode ''
+    glyphs-tab: resources/fonts/xfen-common.txt
     size: 8
   Ches:
     display-name: Ches
