@@ -1,4 +1,4 @@
-auto-compactify: 1
+auto-compactify: 0
 default-lang: en
 default-notation: en
 fairy-zoo:
