@@ -1,5 +1,5 @@
-auto-compactify: 1
-default-lang: en
+auto-compactify: 0
+default-lang: ru
 default-notation: en
 fairy-zoo:
 - [white LE, white PA, white VA, white NA, black DU, white G, white N]
